@@ -1,13 +1,18 @@
-package com.example.onlineshoping.config;
+package com.example.onlineshoping.controller;
 
-import com.example.onlineshoping.dto.SignupRequest;
+import com.example.onlineshoping.config.JwtUtils;
+import com.example.onlineshoping.dto.LoginDto;
+import com.example.onlineshoping.dto.UserDto;
 import com.example.onlineshoping.entity.ERole;
 import com.example.onlineshoping.entity.Role;
 import com.example.onlineshoping.entity.User;
 import com.example.onlineshoping.exception.UserExitByEmailException;
+import com.example.onlineshoping.exception.UserRoleNotFoundException;
 import com.example.onlineshoping.repo.RoleRepository;
 import com.example.onlineshoping.repo.UserRepository;
+import com.example.onlineshoping.responce.ApiResponse;
 import com.example.onlineshoping.service.UserDetailsImpl;
+import com.example.onlineshoping.wrapperclasses.UserWrapper;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.BeanUtils;
@@ -16,6 +21,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.PostMapping;
@@ -26,7 +32,6 @@ import org.springframework.web.bind.annotation.RestController;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/auth")
@@ -46,18 +51,20 @@ public class  AuthenticationController {
     RoleRepository roleRepository;
 
     @PostMapping("/register")
-    public ResponseEntity<User> register(@Valid @RequestBody SignupRequest signupRequest) {
+    public ResponseEntity<ApiResponse> register(@Valid @RequestBody UserDto userDto) {
 
-        if (userRepository.existsByEmail(signupRequest.getEmail())) {
-            throw new UserExitByEmailException("User","email",signupRequest.getEmail(),"1005");
+        if (userRepository.existsByEmail(userDto.getEmail())) {
+            throw new UserExitByEmailException("User","email", userDto.getEmail(),"1005");
         }
 
         User user = new User();
-        BeanUtils.copyProperties(signupRequest,user);
-        user.setPassword(passwordEncoder.encode(signupRequest.getPassword()));
-
-        Set<String> strRoles = signupRequest.getRole();
+        BeanUtils.copyProperties(userDto,user);
+        List<String> strRoles = userDto.getRoles();
         Set<Role> roles = new HashSet<>();
+        user.setRoles(roles);
+        String jwt=jwtUtils.generateJwtToken(UserDetailsImpl.build(user));
+        user.setPassword(passwordEncoder.encode(userDto.getPassword()));
+        user.setToken(jwt);
 
         if (strRoles == null) {
             Role userRole = roleRepository.findByName(ERole.ROLE_USER)
@@ -66,51 +73,60 @@ public class  AuthenticationController {
         } else {
             strRoles.forEach(role -> {
                 switch (role) {
-                    case "admin":
+                    case "admin" -> {
                         Role adminRole = roleRepository.findByName(ERole.ROLE_ADMIN)
-                                .orElseThrow(() -> new RuntimeException("Error: Role is not found."));
+                                .orElseThrow(() -> new UserRoleNotFoundException("Role not found","Enter roles","1010"));
                         roles.add(adminRole);
-
-                        break;
-                    case "mod":
+                    }
+                    case "mod" -> {
                         Role modRole = roleRepository.findByName(ERole.ROLE_MODERATOR)
-                                .orElseThrow(() -> new RuntimeException("Error: Role is not found."));
+                                .orElseThrow(() -> new UserRoleNotFoundException("Role not found","Enter roles","1010"));
                         roles.add(modRole);
-
-                        break;
-                    default:
+                    }
+                    default -> {
                         Role userRole = roleRepository.findByName(ERole.ROLE_USER)
-                                .orElseThrow(() -> new RuntimeException("Error: Role is not found."));
+                                .orElseThrow(() -> new UserRoleNotFoundException("Role not found","Enter roles","1010"));
                         roles.add(userRole);
+                    }
                 }
             });
         }
-
         user.setRoles(roles);
         User savedUser=userRepository.save(user);
-        return ResponseEntity.ok(savedUser);
-
-
+        ApiResponse apiResponse=new ApiResponse();
+        UserWrapper userWrapper=new UserWrapper();
+        BeanUtils.copyProperties(savedUser,userDto);
+        userWrapper.setUser(userDto);
+        apiResponse.setData(userWrapper);
+        return ResponseEntity.ok(apiResponse);
     }
 
     @PostMapping("/authenticate")
-    public ResponseEntity<?> authenticateUser(@Valid @RequestBody AuthenticationRequest loginRequest) {
+    public ResponseEntity<?> authenticateUser(@Valid @RequestBody LoginDto loginDto) {
 
         Authentication authentication = authenticationManager.authenticate(
-                new UsernamePasswordAuthenticationToken(loginRequest.getEmail(), loginRequest.getPassword()));
+                new UsernamePasswordAuthenticationToken(loginDto.getEmail(), loginDto.getPassword()));
 
         SecurityContextHolder.getContext().setAuthentication(authentication);
         String jwt = jwtUtils.generateJwtToken(authentication);
 
         UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
         List<String> roles = userDetails.getAuthorities().stream()
-                .map(item -> item.getAuthority())
-                .collect(Collectors.toList());
+                .map(GrantedAuthority::getAuthority).toList();
 
-        User user=new User();
-        BeanUtils.copyProperties(userDetails,user);
-        user.setToken(jwt);
-        return ResponseEntity.ok(user);
+        UserDto userDto=new UserDto();
+        //BeanUtils.copyProperties(userDetails,userDto);
+        userDto.setName(userDetails.getUsername());
+        userDto.setEmail(userDetails.getEmail());
+        userDto.setAddress(userDetails.getPassword());
+        userDto.setMobileNo(userDetails.getMobileNo());
+        userDto.setToken(jwt);
+        userDto.setRoles(roles);
+        UserWrapper userWrapper=new UserWrapper();
+        userWrapper.setUser(userDto);
+        ApiResponse apiResponse=new ApiResponse();
+        apiResponse.setData(userWrapper);
+        return ResponseEntity.ok(apiResponse);
     }
 
 }
